--- a/docstrings/numerical_simulation/environment_setup/radiation_pressure.yaml
+++ b/docstrings/numerical_simulation/environment_setup/radiation_pressure.yaml
@@ -133,18 +133,20 @@ functions:
       # [cpp] (%!) Note about multi-body occultation...
 
       .. code-block:: python # [py]
-         # [py]
-         # define parameters of the cannonball model # [py]
-         reference_area_radiation = 4.0 # [py]
-         radiation_pressure_coefficient = 1.2 # [py]
-         # define parameter for occulting body # [py]
-         occulting_bodies = [ "Earth" ] # [py]
-         # create radiation pressure interface settings # [py]
-         radiation_pressure_settings = environment_setup.radiation_pressure.cannonball( # [py]
-         "Sun", reference_area_radiation, radiation_pressure_coefficient, occulting_bodies ) # [py]
-         # add radiation pressure interface to "Spacecraft" body # [py]
-         environment_setup.add_radiation_pressure_interface( # [py]
-         bodies, "Spacecraft", radiation_pressure_settings )  # [py]
+        # [py]
+        # define parameters of the cannonball model # [py]
+        reference_area_radiation = 4.0 # [py]
+        radiation_pressure_coefficient = 1.2 # [py]
+        # define parameter for occulting body # [py]
+        occulting_bodies = [ "Earth" ] # [py]
+        # create radiation pressure interface settings # [py]
+        radiation_pressure_settings = environment_setup.radiation_pressure.cannonball( # [py]
+            "Sun", # [py]
+            reference_area_radiation, # [py]
+            radiation_pressure_coefficient, # [py]
+            occulting_bodies ) # [py]
+        # add radiation pressure interface to "Spacecraft" body # [py]
+        environment_setup.add_radiation_pressure_interface( bodies, "Spacecraft", radiation_pressure_settings ) # [py]
 
       .. code-block:: cpp # [cpp]
          # [cpp]
@@ -219,20 +221,29 @@ functions:
       The radiating body is the Sun, the body experiencing the radiation pressure force is the boxes-and-wings - modelled "Spacecraft" body; occultations due to the Earth are taken into account:
 
       .. code-block:: python # [py]
-         # [py]
-         # define parameters of the panelled model # [py]
-         emissivities = [0.1, 0.0, 0.1, 0.1]                            # emissivity of each panel # [py]
-         areas = [4.0, 6.0, 2.3, 2,3]                                   # area of each panel # [py]
-         diffusion_coefficients = [0.46, 0.06, 0.46, 0.46]              # diffusion coefficient of each panel # [py]
-         panel_surface_normals = [ [0.0, 0.0, 1.0], [0.0, 0.0, -1.0],   # normals of each panel surfaces # [py]
-         	[1.0, 0.0, 0.0], [-1.0, 0.0, 0.0] ]  #  in body-fixed reference frame # [py]
-         # define parameter for occulting body # [py]
-         occulting_bodies = [ "Earth" ] # [py]
-         # create radiation pressure interface settings # [py]
-         radiation_pressure_settings = environment_setup.radiation_pressure.panelled( "Sun", emissivities, # [py]
-         	areas, diffusion_coefficients, surfaceNormalsInBodyFixedFrameFunctions, occulting_bodies) # [py]
-         # add radiation pressure interface to "Spacecraft" body # [py]
-         environment_setup.add_radiation_pressure_interface( bodies, "Vehicle", radiation_pressure_settings ) # [py]
+        # [py]
+        # define parameters of the panelled model # [py]
+        emissivities = [0.1, 0.0, 0.1, 0.1]                 # emissivity of each panel # [py]
+        areas = [4.0, 6.0, 2.3, 2,3]                        # area of each panel # [py]
+        diffusion_coefficients = [0.46, 0.06, 0.46, 0.46]   # diffusion coefficient of each panel # [py]
+        panel_surface_normals = [                           # normals of each panel surfaces in body-fixed reference frame # [py]
+            [0.0, 0.0, 1.0], # [py]
+            [0.0, 0.0, -1.0], # [py]
+            [1.0, 0.0, 0.0], # [py]
+            [-1.0, 0.0, 0.0] # [py]
+        ] # [py]
+        # define parameter for occulting body # [py]
+        occulting_bodies = [ "Earth" ] # [py]
+        # create radiation pressure interface settings # [py]
+        radiation_pressure_settings = environment_setup.radiation_pressure.panelled( # [py]
+            "Sun", # [py]
+            emissivities, # [py]
+            areas, # [py]
+            diffusion_coefficients, # [py]
+            panel_surface_normals, # [py]
+            occulting_bodies) # [py]
+        # add radiation pressure interface to "Spacecraft" body # [py]
+        environment_setup.add_radiation_pressure_interface( bodies, "Vehicle", radiation_pressure_settings ) # [py]
 
       # [cpp] cpp code snippet unavailabel (outdated on tudat-space)
 
