--- a/docstrings/numerical_simulation/environment_setup/__package__.yaml
+++ b/docstrings/numerical_simulation/environment_setup/__package__.yaml
@@ -49,7 +49,7 @@ classes:
   - name: BodyListSettings
     short_summary: "Class for defining settings for the creation of a system of bodies."
     extended_summary: |
-      Class for defining settings for the creation of a system of bodies. This object is typicall created from default settings, and
+      Class for defining settings for the creation of a system of bodies. This object is typically created from default settings, and
       then adapted to the user's specific needs.
 
     properties: # [py]
@@ -60,7 +60,7 @@ classes:
 
       - name: frame_orientation # [py]
         type: str # [py]
-        description: Definition of the global frame orienation for the bodies # [py]
+        description: Definition of the global frame orientation for the bodies # [py]
         readonly: True # [py]
 
 
@@ -229,8 +229,8 @@ functions:
     short_summary: "Function that creates a System of bodies from associated settings."
     extended_summary: |
       Function that creates a System of bodies from associated settings. This function creates the separate :class:`~tudatpy.numerical_simulation.Body`
-      objecrs and stores them in a :class:`~tudatpy.numerical_simulation.SystemOfBodies` object. This object represents the full
-      physical environmen in the simulation
+      objects and stores them in a :class:`~tudatpy.numerical_simulation.SystemOfBodies` object. This object represents the full
+      physical environment in the simulation
 
     parameters:
       - name: body_settings # [py]
