Added util to compute pareto optimum from a list of points

--- a/docstrings/numerical_simulation/environment.yaml
+++ b/docstrings/numerical_simulation/environment.yaml
@@ -25,6 +25,7 @@ enums:
 
   - name: AerodynamicCoefficientsIndependentVariables
     short_summary: "Enumeration of the independent variables that can be used to compute aerodynamic coefficients."
+    extended_summary: ""
 
     members:
       - name: mach_number_dependent
